--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,66 @@
 	background-color: #f4f4f4;
 	font-weight: bold;
 }
+
+.toast {
+	visibility: hidden;
+	min-width: 250px;
+	background-color: #f44336;
+	/* rojo */
+	color: white;
+	text-align: left;
+	border-radius: 8px;
+	padding: 16px 20px;
+	position: fixed;
+	z-index: 1000;
+	left: 50%;
+	bottom: 30px;
+	transform: translateX(-50%);
+	font-family: sans-serif;
+	font-size: 16px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+	transition: visibility 0s, opacity 0.5s ease-in-out;
+	opacity: 0;
+}
+
+.toast.mostrar {
+	visibility: visible;
+	opacity: 1;
+}
+
+
+.toast .cerrar {
+	position: absolute;
+	top: 8px;
+	right: 12px;
+	color: white;
+	font-weight: bold;
+	cursor: pointer;
+	font-size: 20px;
+}
+
+.toast .cerrar:hover {
+	color: #ddd;
+}
+
+.resetGameButton {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 36px;
+	cursor: pointer;
+	user-select: none;
+	height: 50px;
+	border-radius: 8px;
+	font-weight: bolder;
+	box-sizing: border-box;
+	text-align: center;
+	transition: box-shadow 0.3s ease, transform 0.3s ease;
+	background-color: transparent;
+	border: none;
+}
+
+.resetGameButton:hover {
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+	transform: scale(1.05);
+}
