--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
 	src: url('../fonts/Seven\ Segment.ttf') format('truetype');
 }
 
+.nav{
+	padding: 30px;
+	text-align: center;
+}
+
 .main {
 	display: flex;
 	justify-content: center;
@@ -24,6 +29,7 @@
 	padding: 0;
 	box-sizing: content-box;
 	justify-content: center;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .cell {
@@ -36,6 +42,32 @@
 	font-size: 12px;
 	user-select: none;
 	box-sizing: border-box;
+}
+
+.cell-mine{
+	flex: 0 0 40px;
+	background-color: red;
+	border: 1px solid #999;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 12px;
+	user-select: none;
+	box-sizing: border-box;
+	background-image: url('mine.png');
+}
+
+.cell-reveal{
+	flex: 0 0 40px;
+	background-color: white;
+	border: 1px solid #999;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 12px;
+	user-select: none;
+	box-sizing: border-box;
+	background-image: url('mine.png');
 }
 
 .playButtons {
