--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@
 	text-align: center;
 }
 
+.selector-dificultad {
+  margin: 10px auto;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.selector-dificultad select {
+  padding: 4px 10px;
+  font-size: 16px;
+}
+
 .main {
 	display: flex;
 	justify-content: center;
@@ -31,6 +42,7 @@
 	justify-content: center;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
 
 .cell {
 	flex: 0 0 40px;
@@ -69,6 +81,7 @@
 	box-sizing: border-box;
 	background-image: url('mine.png');
 }
+
 
 .playButtons {
 	background-color: lightgray;
@@ -234,3 +247,13 @@
 	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 	transform: scale(1.05);
 }
+
+
+.num-1 { color: #0000ff; }       /* Azul */
+.num-2 { color: #008000; }       /* Verde */
+.num-3 { color: #ff0000; }       /* Rojo */
+.num-4 { color: #000080; }       /* Azul oscuro */
+.num-5 { color: #800000; }       /* Marrón oscuro */
+.num-6 { color: #00cccc; }       /* Cian */
+.num-7 { color: #000000; }       /* Negro */
+.num-8 { color: #808080; }       /* Gris */
