--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,6 @@ body.dark-mode .rankingTable td {
   padding: 10px 30px;
   background-color: #f0f0f0;
   border-bottom: 1px solid #ccc;
-  flex-wrap: wrap;
   gap: 10px;
 }
 
@@ -251,22 +250,6 @@ body.dark-mode .rankingTable td {
 	color: red;
 }
 
-.rankingBtn {
-	margin-top: 20px;
-	padding: 10px 20px;
-	background-color: #28a745;
-	border: none;
-	color: white;
-	font-size: 14px;
-	border-radius: 6px;
-	cursor: pointer;
-	transition: background-color 0.3s ease;
-}
-
-.rankingBtn:hover {
-	background-color: #218838;
-}
-
 .rankingTable {
 	width: 100%;
 	border-collapse: collapse;
@@ -283,49 +266,6 @@ body.dark-mode .rankingTable td {
 .rankingTable th {
 	background-color: #f4f4f4;
 	font-weight: bold;
-}
-
-
-
-.toast {
-	visibility: hidden;
-	min-width: 250px;
-	background-color: #f44336;
-	/* rojo */
-	color: white;
-	text-align: left;
-	border-radius: 8px;
-	padding: 16px 20px;
-	position: fixed;
-	z-index: 1000;
-	left: 50%;
-	bottom: 30px;
-	transform: translateX(-50%);
-	font-family: sans-serif;
-	font-size: 16px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-	transition: visibility 0s, opacity 0.5s ease-in-out;
-	opacity: 0;
-}
-
-.toast.mostrar {
-	visibility: visible;
-	opacity: 1;
-}
-
-
-.toast .cerrar {
-	position: absolute;
-	top: 8px;
-	right: 12px;
-	color: white;
-	font-weight: bold;
-	cursor: pointer;
-	font-size: 20px;
-}
-
-.toast .cerrar:hover {
-	color: #ddd;
 }
 
 .resetGameButton {
@@ -385,11 +325,6 @@ body.dark-mode .rankingTable td {
   gap: 10px;
 }
 
-.nav-links {
-  display: flex;
-  gap: 10px;
-}
-
 .flag {
   font-size: 14px; /* Ajustá el tamaño para que no se agrande la celda */
   display: inline-block;
@@ -425,4 +360,17 @@ body.dark-mode .rankingTable td {
 
 #contactForm  textarea {
   resize: vertical;
+}
+
+@media (max-width: 720px) {
+  #board {
+    transform: scale(0.8);
+    transform-origin: top center;
+  }
+}
+@media (max-width: 560px) {
+  #board {
+    transform: scale(0.6);
+    transform-origin: top center;
+  }
 }
